🔧 chore: 메서드 수정
🔗 Resolves: #be/feat/1be/feat/181